# git-local-organizer

./: .gitmodules  Cargo.toml  LICENSE  README.md
github.com/maboesanman/: sprs
src/: config.rs  fork_resolution.rs  main.rs
src/github/: mod.rs  repo_parent.graphql
